test-cases/final-dump/backquote_control_char.exp
Error detected during loading module: backquote_control_char
final-dump/backquote_control_char.wybe:1:5: Syntax error: unexpected control character in a backquoted symbol
expecting simple expression
