test-cases/final-dump/backquote_control_char.wybe
def `backquoted with tab	character` = 1
